--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,6 +8,7 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F9F9F9;
 }
 
 * {
