--- a/src/pages/home/OrderDetailsSection.module.scss
+++ b/src/pages/home/OrderDetailsSection.module.scss
@@ -1,10 +1,19 @@
+@use "src/style/_mantine.scss" as *;
+
 .view {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: $app-menu-width + $app-content-width; // Menu Width + Content Width
+
   background-color: white;
-  position: relative;
 
   padding-inline: 48px;
   flex: 1;
   display: none;
+
+
 }
 
 .view_visible {
