--- a/src/scenes/home/OrderDetailsSection.module.scss
+++ b/src/scenes/home/OrderDetailsSection.module.scss
@@ -3,9 +3,15 @@
 .view {
   background-color: white;
 
-  padding-inline: 48px;
   flex: 1;
   display: none;
+
+  height: 100vh;
+  width: 900px;
+  position: fixed;
+  right: 0;
+
+  overflow: auto;
 }
 
 .view_visible {
@@ -13,8 +19,8 @@
 }
 
 .content {
-  width: 700px;
-  position: fixed;
+  padding-left: 48px;
+  padding-right: 98px;
 }
 
 .header {
