--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -1,33 +1,59 @@
 @use "src/style/_mantine.scss" as *;
 
 .view {
-
   .menu {
     position: fixed;
     left: 0;
     top: 0;
     bottom: 0;
-
     width: $app-menu-width;
     padding-inline: 24px;
     padding-block: 20px;
+    background-color: white;
+    border-right: 1px solid var(--mantine-color-gray-2);
 
     &_logo {
       height: 52px;
+      margin-bottom: 32px;
     }
 
     &_links {
       list-style-type: none;
       margin-top: 20px;
+      padding: 0;
+
+      li {
+        margin-bottom: 12px;
+      }
 
       a {
-        font-weight: bold;
+        display: block;
+        padding: 10px 16px;
+        border-radius: 8px;
+        color: var(--mantine-color-gray-7);
+        text-decoration: none;
+        font-weight: 500;
+        transition: all 0.2s ease;
+
+        &:hover {
+          background-color: var(--mantine-color-gray-0);
+          color: var(--mantine-color-dark-8);
+        }
+
+        &.active {
+          background-color: var(--mantine-color-blue-0);
+          color: var(--mantine-color-blue-7);
+          font-weight: 600;
+        }
       }
     }
 
     &_footer {
-      margin-top: auto;
-      padding: 1rem;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 24px;
       border-top: 1px solid var(--mantine-color-gray-2);
     }
 
