--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,8 @@
+:root {
+  --font-inter: var(--font-inter);
+  --font-alegreya: var(--font-alegreya);
+}
+
 html,
 body {
   max-width: 100vw;
@@ -21,4 +26,3 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
