feat: improve print layout
- Move contentRef to dashed border section only
- Hide dashed border when printing
- Keep border visible on screen

--- a/src/scenes/home/OrderDetailsSection.module.scss
+++ b/src/scenes/home/OrderDetailsSection.module.scss
@@ -55,3 +55,16 @@
   color: var(--mantine-color-dark-7) !important;
   margin: 0 !important;
 }
+
+.print_hidden {
+  @media print {
+    display: none !important;
+  }
+}
+
+.print_border {
+  border: 1px dashed black;
+  @media print {
+    border: none;
+  }
+}
