--- a/src/scenes/home/HomePage.module.scss
+++ b/src/scenes/home/HomePage.module.scss
@@ -22,11 +22,13 @@
 
 .row_headers {
   margin-top: 12px;
-  padding-inline: 40px;
+  padding: 15px 40px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   gap: 20px;
   color: #525252;
+  background: #f1f1f1;
 }
 
 .rows {
