--- a/src/scenes/textile/TextilePage.module.scss
+++ b/src/scenes/textile/TextilePage.module.scss
@@ -13,3 +13,15 @@
   flex-direction: column;
   gap: 2rem;
 }
+
+.checkbox_label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  
+  input[type="checkbox"] {
+    width: 1.2rem;
+    height: 1.2rem;
+    cursor: pointer;
+  }
+}
