--- a/src/scenes/textile/TextilePage.module.scss
+++ b/src/scenes/textile/TextilePage.module.scss
@@ -14,6 +14,17 @@
   gap: 2rem;
 }
 
+.section {
+  margin-top: 2rem;
+}
+
+.order_row {
+  padding: 1rem;
+  border: 1px solid #eee;
+  border-radius: 0.5rem;
+  background-color: white;
+}
+
 .checkbox_label {
   display: flex;
   align-items: center;
