--- a/src/scenes/home/OrderDetailsSection.module.scss
+++ b/src/scenes/home/OrderDetailsSection.module.scss
@@ -12,6 +12,8 @@
   right: 0;
 
   overflow: auto;
+  border-left: 1px solid #f1f1f1;
+  box-shadow: -4px 0 4px rgba(0, 0, 0, 0.05);
 }
 
 .view_visible {
