Ajout des totaux

--- a/src/components/OrderDrawer/OrderDrawer.module.scss
+++ b/src/components/OrderDrawer/OrderDrawer.module.scss
@@ -5,9 +5,9 @@
   border-radius: 8px;
   background: #f8f8f8;
 
-  &.refunded {
-    opacity: 0.6;
-    background-color: var(--mantine-color-gray-1);
+  &.cancelled {
+    opacity: 0.5;
+    background-color: var(--mantine-color-gray-2);
   }
 }
 
