--- a/src/components/OrderDrawer/OrderDrawer.module.scss
+++ b/src/components/OrderDrawer/OrderDrawer.module.scss
@@ -19,3 +19,11 @@
   gap: 4px;
   justify-content: center;
 }
+
+.drawer {
+  :global(.mantine-Drawer-header) {
+    min-height: 45px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+}
