--- a/src/components/OrderDrawer/OrderDrawer.module.scss
+++ b/src/components/OrderDrawer/OrderDrawer.module.scss
@@ -1,5 +1,4 @@
 .product_item {
-  display: flex;
   gap: 16px;
   padding: 12px;
   border-radius: 8px;
@@ -24,8 +23,12 @@
   color: #333;
   :global(.mantine-Drawer-header) {
     min-height: 45px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-block: 0 !important;
+
+    h2 {
+      font-weight: bold;
+      color: #555;
+    }
   }
 }
 
