--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -11,16 +11,23 @@
     padding-block: 20px;
     background-color: white;
     border-right: 1px solid var(--mantine-color-gray-2);
+    display: flex;
+    flex-direction: column;
 
     &_logo {
       height: 52px;
       margin-bottom: 32px;
     }
 
+    &_sync {
+      margin-bottom: 20px;
+    }
+
     &_links {
       list-style-type: none;
-      margin-top: 20px;
+      margin: 0;
       padding: 0;
+      flex-grow: 1;
 
       li {
         margin-bottom: 12px;
@@ -48,22 +55,14 @@
       }
     }
 
-    &_footer {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      padding: 24px;
-      border-top: 1px solid var(--mantine-color-gray-2);
-    }
-
-    .signout_button {
+    &_signout {
+      margin-top: auto;
       width: 100%;
-      justify-content: center;
     }
   }
 
-  .main {
+  .content {
     margin-left: $app-menu-width;
+    padding: 40px;
   }
 }
