--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -1,6 +1,9 @@
 @use "src/style/_mantine.scss" as *;
 
 .view {
+  display: flex;
+  min-height: 100vh;
+
   .menu {
     position: fixed;
     left: 0;
@@ -59,10 +62,18 @@
       margin-top: auto;
       width: 100%;
     }
+
+    &_footer {
+      margin-top: auto;
+      padding-top: 20px;
+    }
   }
 
   .content {
     margin-left: $app-menu-width;
     padding: 40px;
+    flex: 1;
+    background-color: var(--mantine-color-gray-0);
+    min-height: 100vh;
   }
 }
