--- a/src/app/facturation/facturation.module.scss
+++ b/src/app/facturation/facturation.module.scss
@@ -6,3 +6,9 @@
 .title {
   margin-bottom: 2rem;
 }
+
+.weekTitle {
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+  color: var(--mantine-color-gray-7);
+}
