--- a/src/scenes/orders/DetailedOrdersPage.module.scss
+++ b/src/scenes/orders/DetailedOrdersPage.module.scss
@@ -19,15 +19,34 @@
 .orderInfo {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   
-  > * {
-    min-width: 0;
-  }
-}
+  .orderHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-.dateCell {
-  white-space: nowrap;
+    .orderTitle {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
+
+    .orderWaiting {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
+  }
+
+  .orderDetails {
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: stretch;
+
+    > * {
+      flex: 1;
+    }
+  }
 }
 
 .orderItems {
