--- a/src/scenes/orders/DetailedOrdersPage.module.scss
+++ b/src/scenes/orders/DetailedOrdersPage.module.scss
@@ -6,6 +6,14 @@
   margin-top: 2rem;
 }
 
+.main_content {
+  padding: 2rem;
+
+  > * + * {
+    margin-top: 2rem;
+  }
+}
+
 .ordersGrid {
   display: grid;
   gap: 1rem;
