--- a/src/scenes/batch/BatchPage.module.scss
+++ b/src/scenes/batch/BatchPage.module.scss
@@ -56,8 +56,8 @@
 
   .productList {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 1.5rem;
   }
 
   .productItem {
@@ -99,7 +99,8 @@
 
 .productList {
   display: grid;
-  gap: 0.5rem;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 1.5rem;
 }
 
 .productItem {
