--- a/src/app/facturation/facturation.module.scss
+++ b/src/app/facturation/facturation.module.scss
@@ -29,3 +29,9 @@
     text-decoration: underline;
   }
 }
+
+.variantCheckboxes {
+  display: flex;
+  gap: var(--mantine-spacing-xs);
+  flex-wrap: wrap;
+}
