--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -18,6 +18,12 @@
     display: flex;
     flex-direction: column;
 
+    &_header {
+      margin-bottom: 16px;
+      padding-bottom: 16px;
+      border-bottom: 1px solid rgba(60,50,50,0.1);
+    }
+
     &_sync {
       margin-bottom: 20px;
       margin-top: 0;
