--- a/src/layout/IvyLayout.module.scss
+++ b/src/layout/IvyLayout.module.scss
@@ -6,20 +6,20 @@
   margin-top: 60px;
 
   .menu {
-    position: fixed;
-    left: 0;
+    position: sticky;
     top: 60px;
-    bottom: 0;
+    height: calc(100vh - 60px);
     width: $app-menu-width;
+    min-width: $app-menu-width;
     padding-inline: 24px;
     padding-block: 20px;
     background-color: white;
     border-right: 1px solid var(--mantine-color-gray-2);
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 
     &_links {
-      margin-top: 20px;
       list-style-type: none;
       margin: 0;
       padding: 0;
@@ -49,7 +49,9 @@
       }
 
       a {
-        display: block;
+        display: flex;
+        align-items: center;
+        gap: 8px;
         padding: 8px 16px;
         border-radius: 8px;
         color: var(--mantine-color-gray-7);
@@ -58,13 +60,13 @@
         transition: all 0.2s ease;
 
         &:hover {
-          background-color: var(--mantine-color-gray-0);
-          color: var(--mantine-color-dark-8);
+          background-color: var(--mantine-color-green-0);
+          color: var(--mantine-color-green-8);
         }
 
         &.active {
-          background-color: var(--mantine-color-blue-0);
-          color: var(--mantine-color-blue-7);
+          background-color: var(--mantine-color-green-0);
+          color: var(--mantine-color-green-7);
           font-weight: 600;
         }
       }
@@ -77,10 +79,10 @@
   }
 
   .content {
-    margin-left: $app-menu-width;
-    padding: 40px;
     flex: 1;
+    padding: 40px;
     background-color: var(--mantine-color-gray-0);
     min-height: calc(100vh - 60px);
+    overflow-x: auto;
   }
 }
