--- a/src/layout/IvyLayout.module.scss
+++ b/src/layout/IvyLayout.module.scss
@@ -90,5 +90,6 @@
     background-color: var(--mantine-color-gray-0);
     min-height: calc(100vh - 60px);
     overflow-x: auto;
+    position: relative;
   }
 }
