--- a/src/app/ivy/inventory/inventory.module.scss
+++ b/src/app/ivy/inventory/inventory.module.scss
@@ -75,6 +75,12 @@
   }
 }
 
+.skuCount {
+  font-weight: 400;
+  opacity: 0.7;
+  font-size: 11px;
+}
+
 // Grille de produits
 .productsGrid {
   display: grid;
