--- a/src/components/Inventory/ProductDetailView.module.scss
+++ b/src/components/Inventory/ProductDetailView.module.scss
@@ -149,6 +149,23 @@
   font-weight: 500;
 }
 
+.variantNameContent {
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2px;
+}
+
+.colorDot {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-right: 4px;
+  vertical-align: middle;
+  flex-shrink: 0;
+}
+
 .option3Badge {
   display: inline-block;
   padding: 2px 8px;
