--- a/src/components/Inventory/ProductDetailView.module.scss
+++ b/src/components/Inventory/ProductDetailView.module.scss
@@ -11,6 +11,7 @@
 // Header avec bouton retour
 .header {
   position: sticky;
+  z-index: 99;
   display: flex;
   align-items: center;
   top: -40px;
