--- a/src/components/TopNavbar/TopNavbar.module.scss
+++ b/src/components/TopNavbar/TopNavbar.module.scss
@@ -1,8 +1,5 @@
 .topNavbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: relative;
   height: 60px;
   background-color: white;
   border-bottom: 1px solid var(--mantine-color-gray-2);
