--- a/src/layout/IvyLayout.module.scss
+++ b/src/layout/IvyLayout.module.scss
@@ -4,10 +4,10 @@
   display: flex;
   min-height: calc(100vh - 60px);
   max-height: calc(100vh - 60px);
-  margin-top: 60px;
 
   .menu {
     position: sticky;
+    z-index: 99;
     top: 60px;
     height: calc(100vh - 60px);
     width: $app-menu-width;
